# BLASter

./: EIGEN3_PACKAGING_SUMMARY.md  INTERFACE_README.md  MANIFEST.in  README.md  _version.py  find_pruning_params.py  pyproject.toml  setup.py
.github/workflows/: README.md  build-test.yml  docs.yml  local-test.sh  quality.yml  release.yml  wheels.yml
examples/: demo.py
src/: app.py
src/blaster/: __init__.py  app.py  blaster.py  interface.py  lattice_io.py  size_reduction.py  stats.py
src/blaster.egg-info/: PKG-INFO  SOURCES.txt
